--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body class="container">
   <form id="formOne">
     <label for="input">Input a number between 1 and 3999</label>
-    <input id="input" type="text">
+    <input id="input" type="number">
     <button type="submit">submit!</button>
   </form>
   <div id="output">
